@@ -129,6 +129,11 @@ def chooser_upload(request):
         if form.is_valid():
             document.file_size = document.file.size
 
+            # Set new document file hash
+            document.file.seek(0)
+            document._set_file_hash(document.file.read())
+            document.file.seek(0)
+
             form.save()
 
             # Reindex the document to make sure all tags are indexed
