@@ -51,6 +51,12 @@ def add(request):
             doc = form.save(commit=False)
             doc.uploaded_by_user = request.user
             doc.file_size = doc.file.size
+
+            # Set new document file hash
+            doc.file.seek(0)
+            doc._set_file_hash(doc.file.read())
+            doc.file.seek(0)
+
             doc.save()
 
             # Success! Send back an edit form for this document to the user
